--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 <head>
   <title>Rob Ashton</title>
+  <style type="text/css">
+    body { font-family: "Comic Sans MS"; color: pink; }
+  </style>
 </head>
 <body>
   <h1>Rob Ashton</h1>
