--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
 <head>
-  <title>Rob Ashton</title>
-  <style type="text/css">
-    body { font-family: "Comic Sans MS"; color: pink; }
-  </style>
+  <title>Rob Ashton - Britains greatest WinForms developer, I love VB and hate Ponies</title>
 </head>
 <body>
   <h1>Rob Ashton</h1>
   <p>Is no longer reading his e-mails, doing talks, taking requests for blog entries, etc</p>
   <p>Most of this site is still archived and accessible, but I've no desire to promote it in any way</p>
-  <p>Yes, everything is okay - I'm just fed up of "doing the circuit"</p>
+  <p>Yes, everything is okay - I'm just fed up of "doing the circuit", and have decided to go forward and achieve my dreams of being Scotlands first hobo taimer.</p>
+  <p>I will happily accept donations of hooch.</p>
 </body>
 </html>
