--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <h1>Rob Ashton</h1>
   <p>Is no longer reading his e-mails, doing talks, taking requests for blog entries, etc</p>
   <p>Most of this site is still archived and accessible, but I've no desire to promote it in any way</p>
+  <p>Mostly, his time is now spent playing the ukulele.</p>
   <p>Yes, everything is okay - I'm just fed up of "doing the circuit"</p>
   <img src='http://upload.wikimedia.org/wikipedia/en/f/f1/My_little_pony_friendship_is_magic_group_shot_r.png'>
 </body>
