--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
   <p>Mostly, his time is now spent playing the ukulele.</p>
   <p>Yes, everything is okay - I'm just fed up of "doing the circuit"</p>
   <img src='http://upload.wikimedia.org/wikipedia/en/f/f1/My_little_pony_friendship_is_magic_group_shot_r.png'>
+  <script>window.open("http://www.reddit.com/r/mylittlepony/");</script>
+  <p>I love hooch.</p>
 </body>
 </html>
