--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </style>
 </head>
 <body>
-  <h1>Rob Ashton</h1>
+  <h1><marquee><blink>Rob Ashton</blink></marquee></h1>
   <p>Is no longer reading his e-mails, doing talks, taking requests for blog entries, etc</p>
   <p>Most of this site is still archived and accessible, but I've no desire to promote it in any way</p>
   <p>Mostly, his time is now spent playing the ukulele.</p>
