--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </style>
 </head>
 <body>
-  <h1><marquee><blink>Rob Ashton</blink></marquee></h1>
+  <h1>Rob Ashton</h1>
   <p>Is no longer reading his e-mails, doing talks, taking requests for blog entries, etc</p>
   <p>Most of this site is still archived and accessible, but I've no desire to promote it in any way</p>
   <p>Mostly, his time is now spent playing the ukulele.</p>
@@ -14,5 +14,10 @@
   <img src='http://upload.wikimedia.org/wikipedia/en/f/f1/My_little_pony_friendship_is_magic_group_shot_r.png'>
   <script>window.open("http://www.reddit.com/r/mylittlepony/");</script>
   <p>I love hooch.</p>
+  <marquee direction="down" width="600" height="300" behavior="alternate" style="border:solid">
+  <marquee behavior="alternate">
+    Future Furry Aficionado
+  </marquee>
+</marquee>
 </body>
 </html>
