--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>Rob Ashton</title>
+  <title>Rob Ashton loves Stacko so much!</title>
   <style type="text/css">
     body { font-family: "Comic Sans MS"; color: pink; }
     * {
