--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-<img src='http://s3-ec.buzzfed.com/static/enhanced/webdr05/2013/5/10/14/enhanced-buzz-2595-1368211339-25.jpg'>
-<img src='http://s3-ec.buzzfed.com/static/enhanced/webdr06/2013/5/10/15/enhanced-buzz-5624-1368213206-7.jpg'>
-<img src='http://s3-ec.buzzfed.com/static/enhanced/webdr05/2013/5/10/16/enhanced-buzz-29643-1368219446-1.jpg'>
-<h1><a href='http://m.bbc.co.uk/news/entertainment-arts-31858156'>Rest in Peace Terry</a></h1>
+<h1>Microsoft Angualr MVP, WCF Certified Technician</h1>
+<p>
+  I'm <a href="http://codeofrob.com">always available for contracts and parties</a>.
+</p>
 </body>
 </html>
