--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <p>
   I'm <a href="http://codeofrob.com">always available for contracts and parties</a>.
 </p>
+<img src='http://www.wordarticles.com/images/MVP_FullColor_ForScreen.png'>
 </body>
 </html>
