--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
   I'm <a href="http://codeofrob.com">always available for contracts and parties</a>.
 </p>
 <img src='http://www.wordarticles.com/images/MVP_FullColor_ForScreen.png'>
+
+<blockquote class="twitter-tweet" lang="en"><p>I just deployed Rob Ashton&#39;s homepage (<a href="http://t.co/xCK6NCabfH">http://t.co/xCK6NCabfH</a>)... this is fun <a href="https://t.co/WY5DIt1Bf4">https://t.co/WY5DIt1Bf4</a></p>&mdash; Rob Conery (@robconery) <a href="https://twitter.com/robconery/status/576081460580450304">March 12, 2015</a></blockquote>
+<script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>  
+  
 </body>
 </html>
