--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading">Microsoft Angualr MVP</h1>
                         <h3>WCF Certified Technician</h3>
-                        <p class="intro-text">I'm always available for contracts and parties.</p>
+                        <p class="intro-text">I am love big contracts. and parties.</p>
                         <a href="#mentions" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
