--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                     <li>
                         <a class="page-scroll" href="#mentions">Mentions</a>
                     </li>
+                    <li>
+                        <a href="http://codeofrob.com/blog.html">Blog</a>
+                    </li>
+                    <li>
+                        <a href="http://codeofrob.com/statements.html">Testimonials</a>
+                    </li>
+                    <li>
+                        <a href="http://codeofrob.com/hire.html">Hire Me</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
