--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                         <a class="page-scroll" href="#mentions">Mentions</a>
                     </li>
                     <li>
-                        <a href="http://codeofrob.com/blog.html">Blog</a>
+                        <a href="http://codeofrob.com/blog.html" target="_top">Blog</a>
                     </li>
                     <li>
-                        <a href="http://codeofrob.com/statements.html">Testimonials</a>
+                        <a href="http://codeofrob.com/statements.html" target="_top">Testimonials</a>
                     </li>
                     <li>
-                        <a href="http://codeofrob.com/hire.html">Hire Me</a>
+                        <a href="http://codeofrob.com/hire.html" target="_top">Hire Me</a>
                     </li>
                 </ul>
             </div>
