--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading" ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
+                        <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
                         <h3>WTF Certified Technician</h3>
                         <p class="intro-text">I am love big contracts. and parties.</p>
                         <div id="scrollingScrollingScrollingKeepThoseWagonsScrolling">
