--- a/index.html
+++ b/index.html
@@ -78,6 +78,10 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
         <!-- /.container -->
     </nav>
 
+    <div class="overlay">
+                        <img class="pull-right" src="img/honeybadger.png"></img>
+                        </div>
+
     <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
