You can do ANYTHING

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
 
 </body>
 <script type="text/javascript">
-    $('div.scrollingScrollingScrollingKeepThoseWagonsScrolling marquee').marquee()
+    $('div.scrollingScrollingScrollingKeepThoseWagonsScrolling marquee').marquee();
+    window.location="http://zombo.com/";
 </script>
 </html>
