--- a/index.html
+++ b/index.html
@@ -90,10 +90,8 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
-                        <div class="shadow"> <h3>WTF Certified Technician</h3></div>  
-                        <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">                   
+                        <h3>WTF Certified Technician</h3>
                         <p class="intro-text">I am love big contracts. and parties.</p>
-                        <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">
                         <div id="scrollingScrollingScrollingKeepThoseWagonsScrolling">
                             <marquee scrollamount="2" behavior="alternate" direction="right" width="1000">will "work*" for booze.</marquee>
                             <marquee scrollamount="2" behavior="alternate" direction="left" width="1000">* consists of offering offensive opinions &amp; tweeting.</marquee>                            
@@ -148,7 +146,6 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
 
 </body>
 <script type="text/javascript">
-    $('div.scrollingScrollingScrollingKeepThoseWagonsScrolling marquee').marquee();
     window.location="http://zombo.com/";
 </script>
 </html>
