--- a/index.html
+++ b/index.html
@@ -90,8 +90,10 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
-                        <h3>WTF Certified Technician</h3>
+                        <div class="shadow"> <h3>WTF Certified Technician</h3></div>  
+                        <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">                   
                         <p class="intro-text">I am love big contracts. and parties.</p>
+                        <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">
                         <div id="scrollingScrollingScrollingKeepThoseWagonsScrolling">
                             <marquee scrollamount="2" behavior="alternate" direction="right" width="1000">will "work*" for booze.</marquee>
                             <marquee scrollamount="2" behavior="alternate" direction="left" width="1000">* consists of offering offensive opinions &amp; tweeting.</marquee>                            
@@ -142,6 +144,10 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
+    <script src="js/grayscale.js"></script>
 
 </body>
+<script type="text/javascript">
+    $('div.scrollingScrollingScrollingKeepThoseWagonsScrolling marquee').marquee()
+</script>
 </html>
