Sass is SOOOOOOO much better than less

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
 
     <!-- Site CSS -->
     <link href="css/site.css" rel="stylesheet">
+    
+    <!-- Sass is soooooooo much better than less -->
+    <link href="css/sass.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
