--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                         <p class="intro-text">I am love big contracts. and parties.</p>
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">
                         <div id="scrollingScrollingScrollingKeepThoseWagonsScrolling">
-                            <marquee scrollamount="2" behavior="alternate" direction="right" width="1000">will "work*" for booze.</marquee>
+                            <marquee scrollamount="2" behavior="alternate" direction="right" width="1000">
+                            <img src="img/death.gif" />
+                            <p>will "work*" for booze.</p>
+                            </marquee>
                             <marquee scrollamount="2" behavior="alternate" direction="left" width="1000">* consists of offering offensive opinions &amp; tweeting.</marquee>                            
                         </div>
                         <a href="#mentions" class="btn btn-circle page-scroll">
@@ -114,7 +117,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <section id="mentions" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <div class="container">
+                <div id="birdy" class="container">
                 <img class="col-lg-2 col-lg-offset-1" src="img/weaselpeckel.gif" alt="squawk" />
                 <h2 class="col-lg-3">Mentions</h2>
                 <img class="col-lg-2" src="img/weaselpecker.gif" alt="screech" />
@@ -126,6 +129,9 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
 
     <!-- Map Section -->
     <div id="map"></div>
+    <marquee scrollamount="20" behavior="alternate" direction="right" width="60%" padding-left="400" >
+        <img width="40" src="img/luggage.gif" />
+    </marquee>
 
     <!-- Footer -->
     <footer>
