I see your SASS and I raise you Stylus...

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <!-- Sass is soooooooo much better than less -->
     <link href="css/sass.css" rel="stylesheet">
 
+    <!-- SASS is slow and not as nice as Stylus is -->
+    <link href="css/stylus.css" rel="stylesheet">
+
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
