--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
                         <div class="shadow"> <h3>WTF Certified Technician</h3></div>  
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">                   
-                        <p class="intro-text">I am love big contracts. and parties.</p>
+                        <p class="intro-text blink">I am love big contracts. and parties.</p>
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">
                         <div id="scrollingScrollingScrollingKeepThoseWagonsScrolling">
                             <marquee scrollamount="2" behavior="alternate" direction="right" width="1000">
                             <img src="img/death.gif" />
                             <p>will "work*" for booze.</p>
                             </marquee>
-                            <marquee scrollamount="2" behavior="alternate" direction="left" width="1000">* consists of offering offensive opinions &amp; tweeting.</marquee>                            
+                            <marquee scrollamount="2" behavior="alternate" direction="left" width="1000" class="blink">* consists of offering offensive opinions &amp; tweeting.</marquee>                            
                         </div>
                         <a href="#mentions" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -139,7 +139,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; Crowd Sourced Home Page</p>
+            <p class="blink">Copyright &copy; Crowd Sourced Home Page</p>
         </div>
     </footer>
 
