--- a/index.html
+++ b/index.html
@@ -140,6 +140,10 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <footer>
         <div class="container text-center">
             <p class="blink">Copyright &copy; Crowd Sourced Home Page</p>
+            <p>
+            <a href="http://validator.w3.org/check?uri=referer"><img
+              src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
+          	</p>
         </div>
     </footer>
 
