Removed the meta refresh

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta http-equiv="refresh" content="60;URL=http://www.pluralsight.com/courses/building-multi-client-end-to-end-service-oriented-applications">
     <script src="js/jquery.js"></script>
     <script src="js/marquee.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
@@ -145,7 +144,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
               src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
               <br>
               <br>
-              <iframe width="300" height="24" src="https://www.youtube.com/embed/y6oXW_YiV6g?autoplay=1&amp;rel=0&amp;showinfo=0&amp;autohide=0" frameborder="0" allowfullscreen></iframe>
+              <iframe width="300" height="24" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&amp;rel=0&amp;showinfo=0&amp;autohide=0" frameborder="0" allowfullscreen></iframe>
             </p>
         </div>
     </footer>
