--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
                         <div class="shadow"> <h3>WTF Certified Technician</h3></div>  
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">                   
-                        <p class="intro-text blink">I am love big contracts. and parties.</p>
+                        <p class="intro-text blink">Hi, I'm Rob and I like to party.</p>
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">
                         <div id="scrollingScrollingScrollingKeepThoseWagonsScrolling">
                             <marquee scrollamount="2" behavior="alternate" direction="right" width="1000">
