--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">                   
                         <p class="intro-text blink">Hi, I'm Rob and I like to party.</p>
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">
+                        <p class="shadow">and a part time contractor</p>
+                        <img src="img/contractor.jpg" alt="hitman">                        
                         <div id="scrollingScrollingScrollingKeepThoseWagonsScrolling">
                             <marquee scrollamount="2" behavior="alternate" direction="right" width="1000">
                             <img src="img/death.gif" />
