Enhance auditory scrolling experience

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <script src="js/jquery.js"></script>
     <script src="js/marquee.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+    <script src="http://code.onion.com/fartscroll.js"></script>
     <title>Crowdsourced Home Page</title>
 
     <!-- Bootstrap Core CSS -->
@@ -67,6 +68,8 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
          theForm.submit();
      }
  }
+
+ fartscroll(50);
  //]]>
  </script>
 
