The Truth Is Out There

--- a/index.html
+++ b/index.html
@@ -112,11 +112,12 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     </nav>
 
     <div class="overlay">
-                        <img class="pull-right" src="img/honeybadger.png"></img>
-                        </div>
+        <img class="pull-right" src="img/honeybadger.png"></img>
+    </div>
 
     <!-- Intro Header -->
     <header class="intro">
+        <img class="ad-malder" src="img/malder.gif" alt="The Truth Is Out There" />
         <div class="intro-body">
             <div class="container">
                 <div class="row">
