Best viewed with Internet Explorer

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
                         <div class="shadow"> <h3>WTF Certified Technician</h3></div>  
-                        <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">                   
+                        <img src="img/ie.png" alt="Best Viewed with Internet Explorer" align="TEXTTOP">                   
                         <p class="intro-text blink">Hi, I'm Rob and I like to party.</p>
                         <img src="img/aniearth.gif" alt="Revolving Globe" height="40" width="40" align="TEXTTOP">
                         <p class="shadow">and a part time contractor</p>
