--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
               <iframe width="300" height="24" src="https://www.youtube.com/embed/dQw4w9WgXcQ?autoplay=1&amp;rel=0&amp;showinfo=0&amp;autohide=0" frameborder="0" allowfullscreen></iframe>
             </p>
             <p><img src="http://www.oocities.org/bornhoney/jokes/gates-devil.gif" /></p>
+            <p><img src="http://www.wonder-tonic.com/geocitiesizer/images/counter.gif" /></p>
         </div>
     </footer>
 
