--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
          theForm.submit();
      }
  }
-
- fartscroll(50);
+// bored of this now
+// fartscroll(50);
  //]]>
  </script>
 
