--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                         <img class="pull-right" src="img/honeybadger.png"></img>
                         </div>
 
+        <img class="ad-dance" src="img/dance.gif" />
     <!-- Intro Header -->
     <header class="intro">
         <div class="intro-body">
