--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <!-- Intro Header -->
     <header class="intro">
         <img class="ad-malder" src="img/malder.gif" alt="The Truth Is Out There" />
+        <img class="ad-dance" src="img/dance.gif" />
         <div class="intro-body">
             <div class="container">
                 <div class="row">
