Closes #71 - Revert conflicting bit of this PR
Guessing line was commented out because singleton
was causing a javascript error but this is now fixed.

--- a/index.html
+++ b/index.html
@@ -234,8 +234,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
           };         
         })();
 
-		// u not workin :( cannot into space
-        // mySingleton.youNeedMoarCowbell();
+        mySingleton.youNeedMoarCowbell();
     });
 </script>
 	<script src="js/snowstorm.js"></script>
