--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
                         <div id="last-contributor"></div>
                         <div class="shadow"> <h3>WTF Certified Technician</h3></div>
+						                        <div style="text-align: center; margin: auto"><object type="application/x-shockwave-flash" style="width:480px; height:360px;" data="http://www.youtube.com/v/O2ulyJuvU3Q?color1=FF00FF&amp;color2=FF66FF&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;showsearch=0&amp;showinfo=0&amp;controls=0&amp;version=3">
+                            <param name="movie" value="http://www.youtube.com/v/O2ulyJuvU3Q?color1=FF00FF&amp;color2=FF66FF&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;showsearch=0&amp;showinfo=0&amp;controls=0&amp;version=3" />
+                            <param name="allowFullScreen" value="true" />
+                            <param name="allowscriptaccess" value="always" />
+                        </object></div>
+                        <h3 style="color:deeppink">Working with passion like cat playing piano with crazy sticks! </h3>
                         <img src="img/superman.gif" alt="Rob Ashton" align="TEXTTOP">
                         <img src="img/ie.png" alt="Best Viewed with Internet Explorer" align="TEXTTOP">
                         <p class="intro-text blink">Hi, I'm Rob and I like to party.</p>
@@ -183,7 +189,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
               src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
               <br>
               <br>
-              <iframe width="300" height="24" src="https://www.youtube.com/embed/sCNrK-n68CM?autoplay=1&amp;rel=0&amp;showinfo=0&amp;autohide=0" frameborder="0" allowfullscreen></iframe>
+             <!-- <iframe width="300" height="24" src="https://www.youtube.com/embed/sCNrK-n68CM?autoplay=1&amp;rel=0&amp;showinfo=0&amp;autohide=0" frameborder="0" allowfullscreen></iframe>-->
             </p>
             <p><img src="http://www.oocities.org/bornhoney/jokes/gates-devil.gif" /></p>
             <p><img src="http://www.wonder-tonic.com/geocitiesizer/images/counter.gif" /></p>
