Frames are back!

--- a/menu.html
+++ b/menu.html
@@ -5,8 +5,12 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
  </HEAD>
- <FRAMESET COLS="10%,90%">
-   <FRAME SRC="menu.html">
-   <FRAME SRC="main.html">
- </FRAMESET>
+ <BODY>
+	<h3>The left-hand menu is under construction</h3>
+	<h4>Please check back soon</h4>
+	
+	<!-- start image -->
+	<img src="img/underconstruction.gif" border="0" alt="Under construction" width="100%">
+	<!-- end image -->
+ </BODY>
  </HTML>
