--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
  </HEAD>
  <BODY>
+ 	<h2>Busy learning MSBuild for I love it with all my heart</h2>
 	<h3>The left-hand menu is under construction</h3>
 	<h4>Please check back soon</h4>
 	
