--- a/main.html
+++ b/main.html
@@ -134,6 +134,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                             <param name="allowscriptaccess" value="always" />
                         </object></div>
                         <h3 style="color:deeppink">Working with passion like cat playing piano with crazy sticks! </h3>
+                        <img src="img/loading_java.gif" alt="Java Rulez" align="TEXTTOP">
                         <img src="img/superman.gif" alt="Rob Ashton" align="TEXTTOP">
                         <img src="img/ie.png" alt="Best Viewed with Internet Explorer" align="TEXTTOP">
                         <p class="intro-text blink">Hi, I'm Rob and I like to party.</p>
