--- a/main.html
+++ b/main.html
@@ -126,6 +126,8 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" ng-cloak ng-model="text" ng-mouseenter="text = 'Angular'" ng-mouseleave="text = 'Angualr'" ng-init="text = 'Angualr'">Microsoft {{text}} MVP</h1>
+                        <h1>Quit Twitter To Avoid MSBuild Bitching</h1>
+                        <img src='https://pbs.twimg.com/media/CAiOKGQWgAAIZuR.jpg'/>
                         <div id="last-contributor"></div>
                         <div class="shadow"> <h3>WTF Certified Technician</h3></div>
 						                        <div style="text-align: center; margin: auto"><object type="application/x-shockwave-flash" style="width:480px; height:360px;" data="http://www.youtube.com/v/O2ulyJuvU3Q?color1=FF00FF&amp;color2=FF66FF&amp;rel=0&amp;loop=1&amp;autoplay=1&amp;showsearch=0&amp;showinfo=0&amp;controls=0&amp;version=3">
