--- a/main.html
+++ b/main.html
@@ -148,7 +148,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
                             <img src="img/death.gif" />
                             <p>will "work*" for booze.</p>
                             </marquee>
-                            <marquee scrollamount="2" behavior="alternate" direction="left" width="1000" class="blink">* consists of offering offensive opinions &amp; tweeting.</marquee>
+                            <marquee scrollamount="2" behavior="alternate" direction="left" width="1000" class="blink">* consists of offering offensive opinions <s>&amp; tweeting</s>.</marquee>
                         </div>
                         <div id="cowbell">
                             <img id="moarCowbell" src="img/cowbell.gif" alt="Moar Cowbell"/>
