--- a/main.html
+++ b/main.html
@@ -162,13 +162,15 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
 
     <!-- About Section -->
     <section id="mentions" class="container content-section text-center">
-		<div style="width: 100%; height:175px; background-image: url(img/ergonomic-keyboard-typing-with-wristbraces-picture.jpg); background-repeat: repeat-x;"></div
+		<div style="width: 100%; height:175px; background-image: url(img/ergonomic-keyboard-typing-with-wristbraces-picture.jpg); background-repeat: repeat-x;"></div>
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
+            <div class="col-lg-12 ">
                 <div id="birdy" class="container">
-                <img class="col-lg-2 col-lg-offset-1" src="img/weaselpeckel.gif" alt="squawk" />
-                <h2 class="col-lg-3">Mentions</h2>
-                <img class="col-lg-2" src="img/weaselpecker.gif" alt="screech" />
+                  <img class="col-lg-2 col-lg-offset-1" src="img/banana.gif" alt="ohyeah" />
+                  <img class="col-lg-2" src="img/weaselpeckel.gif" alt="squawk" />
+                  <h2 class="col-lg-3">Mentions</h2>
+                  <img class="col-lg-2" src="img/weaselpecker.gif" alt="screech" />
+                  <img class="col-lg-2" src="img/banana.gif" alt="ohyeah" />
                 </div>
                 <blockquote class="twitter-tweet" lang="en"><p>I just deployed Rob Ashton&#39;s homepage (<a href="http://t.co/xCK6NCabfH">http://t.co/xCK6NCabfH</a>)... this is fun <a href="https://t.co/WY5DIt1Bf4">https://t.co/WY5DIt1Bf4</a></p>&mdash; Rob Conery (@robconery) <a href="https://twitter.com/robconery/status/576081460580450304">March 12, 2015</a></blockquote>
             </div>
