--- a/main.html
+++ b/main.html
@@ -166,6 +166,7 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
         <div class="row">
             <div class="col-lg-12 ">
                 <div id="birdy" class="container">
+                <img class="col-lg-2 col-lg-offset-1" src="img/minionbanana.gif" alt="ohyeah" />
                   <img class="col-lg-2 col-lg-offset-1" src="img/banana.gif" alt="ohyeah" />
                   <img class="col-lg-2" src="img/weaselpeckel.gif" alt="squawk" />
                   <h2 class="col-lg-3">Mentions</h2>
