--- a/main.html
+++ b/main.html
@@ -49,6 +49,15 @@ Theme: https://github.com/IronSummitMedia/startbootstrap-grayscale
     <!-- nothing is complete without ponies -->
     <script type="text/javascript" src="https://panzi.github.io/Browser-Ponies/basecfg.js" id="browser-ponies-config"></script><script type="text/javascript" src="https://panzi.github.io/Browser-Ponies/browserponies.js" id="browser-ponies-script"></script><script type="text/javascript">/* <![CDATA[ */ (function (cfg) {BrowserPonies.setBaseUrl(cfg.baseurl);BrowserPonies.loadConfig(BrowserPoniesBaseConfig);BrowserPonies.loadConfig(cfg);})({"baseurl":"https://panzi.github.io/Browser-Ponies/","fadeDuration":500,"volume":1,"fps":25,"speed":3,"audioEnabled":false,"dontSpeak":true,"showFps":false,"showLoadProgress":false,"speakProbability":0.1,"spawn":{"applejack":1,"fluttershy":1,"pinkie pie":1,"rainbow dash":1,"rarity":1,"twilight sparkle":1},"autostart":true}); /* ]]> */</script>
 
+    <link rel="stylesheet" type="text/css" href="https://cdn.rawgit.com/smore-inc/clippy.js/8bfd1f92c725c6bc3a435d538a77c3302b327c08/build/clippy.css" />
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="https://cdn.rawgit.com/smore-inc/clippy.js/8bfd1f92c725c6bc3a435d538a77c3302b327c08/build/clippy.min.js"></script>
+    <script type="text/javascript">
+      clippy.load('Clippy', function(agent) {
+        agent.show();
+      });
+    </script>
+
 </head>
 
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top">
