--- a/menu.html
+++ b/menu.html
@@ -9,6 +9,7 @@
  	<marquee>Busy learning MSBuild for I love it with all my heart</marquee>
 	<h3>The left-hand menu is under construction</h3>
 	<h4>Please check back soon</h4>
+	<h5>If you dare...</h5>
 	
 	<!-- start image -->
 	<img src="img/underconstruction.gif" border="0" alt="Under construction" width="100%">
