--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 	<h5>If you dare...</h5>
 	
 	<!-- start image -->
-	<img src="img/underconstruction.gif" border="0" alt="Under construction" width="100%">
+	<img src="http://www.animatedgif.net/underconstruction/anim0205-1_e0.gif" border="0" alt="Under construction" width="100%">
 	<!-- end image -->
  </BODY>
  </HTML>
