--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,7 @@
 	
 	<!-- start image -->
 	<img src="http://www.animatedgif.net/underconstruction/anim0205-1_e0.gif" border="0" alt="Under construction" width="100%">
+	<img src="img/notepad4.gif" border="0" alt="Notepad mania..">
 	<!-- end image -->
  </BODY>
  </HTML>
